Grammer.txt
<function_definition> ::= "fn" <identifier> "(" ")" "{" 
                         <statement> ";"
                        "}" ";"

<statement> ::= <variable_declaration>
            | <condition_statement>
            | <loop_statement>
            | <operation>
            | <print_statement>

<variable_declaration> ::= <identifier> "=" <expression> ";"

<condition_statement> ::= "lo" "(" <condition> ")" "{" <statement> "}" ";"
                      | "lomesh" "(" <condition> ")" "{" <statement> "}" ";"
                      | "mesh" "{" <statement> "}" ";"

<condition> ::= <expression> <comparison_operator> <expression>
<comparison_operator> ::= "=="

<loop_statement> ::= "floop" "( <identifier> "=" <digit> "," <identifier> <comparison_operator> <digit> "," <identifier> "++" ")" "{" 
                    <statement> ";" 
                   "}" ";"

<operation> ::= <identifier> ("++" | "--" | "=") <expression>

<print_statement> ::= "atl3bra" "(" <string_literal> ")" ";"

<expression> ::= <identifier> | <literal>
<literal> ::= <number> | <string_literal>
<string_literal> ::= "\"" character* "\""

<identifier> ::= <letter> { <letter> | <digit> | "_" }
<letter> ::= "a" | "b" | ... | "z" | "A" | "B" | ... | "Z"
<digit> ::= "0" | "1" | ... | "9"
